# 276-phase2

./: .gitmodules  pyproject.toml  ruff.toml
.github/workflows/: coverage-reporter  python-app.yml
src/: main.py
src/game/: analytics_ui.py  daily.py  game_ui.py  leaderboard_ui.py
src/local_repos/: friends.py
src/phase2/: account_ui.py  leaderboard.py
tests/: test_leaderboard_ui.py
